change method in repo category

--- a/Controller/src/main/resources/templates/client-home.html
+++ b/Controller/src/main/resources/templates/client-home.html
@@ -17,12 +17,12 @@
             .v-40-test {
                 height: 40vh;
             }
-            .vh-30 { 
+            .vh-30 {
                 height: 28vh;
             }
             .card{
                 border : 0px !important;
-               
+
             }
             .v-parent > div {
                 width: 48%;
@@ -48,18 +48,18 @@
             
             .group-one-c-one{
                 /* background: url("image-static/dribbble_starry_night.png") no-repeat center center; */
-                background-image:  url("image-static/dribbble_starry_night.png");
+                /*background-image:  url("image-static/dribbble_starry_night.png");*/
                 background-position: center center;
                 background-size: cover;
                 /* filter: brightness(60%); */
             }
             .group-one-c-two{
-                background: url("image-static/coupledrink.png") no-repeat center center;
+                /*background: url("image-static/coupledrink.png") no-repeat center center;*/
                 background-size: cover;
                 /* filter: brightness(60%) */
             }
             .group-one-c-three{
-                background: url("image-static/girlnightcupview.jpg") no-repeat center center;
+                /*background: url("image-static/girlnightcupview.jpg") no-repeat center center;*/
                 background-size: cover;
                 /* filter: brightness(60%) */
             }
