--- a/Controller/src/main/resources/templates/admin-layout.html
+++ b/Controller/src/main/resources/templates/admin-layout.html
@@ -19,11 +19,22 @@
     .bg-color-two {
         background-color: #E5EAED;
     }
+    .loading-div {
+            opacity: 0.7;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-color: #470000;
+            z-index: 3;
+        }
     </style>
 </head>
 <body>
     <div th:replace="~{navbar/__admin_navbar}"></div>
-    <div class="container-fluid ">
+    <div id="loading" class="loading-div">
+        <div class="loader09"></div>
+    </div>
+    <div id="content_body" class="container-fluid d-none ">
         <div class="row ">
             <!-- LEFT SIDE BAR -->
             <div class="col-1 px-0 left-side-menu-div d-none d-lg-block">
@@ -154,6 +165,10 @@
                 }
             })   
         }
+        setTimeout(function(){
+            $("#loading").addClass("d-none")
+            $("#content_body").removeClass("d-none")
+        }, 1000);
     </script>
 </body>
 </html>
