--- a/Controller/src/main/resources/templates/fragment/__bootstrap_link.html
+++ b/Controller/src/main/resources/templates/fragment/__bootstrap_link.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" th:href="@{/node_module/bootstrap-4.4.1/dist/css/bootstrap.min.css}">
-
+<link rel="stylesheet" href="/css/loading.css">
 <style>
     /*
         for title
