--- a/Controller/src/main/resources/templates/home-layout.html
+++ b/Controller/src/main/resources/templates/home-layout.html
@@ -43,12 +43,22 @@
         .card_buttom:hover{
             background-color: #f3f3f3;
         }
+        .loading-div {
+            opacity: 0.7;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-color: #470000;
+            z-index: 3;
+        }
     </style>
 </head>
-
-<body>
+<body id="main_body" class="">
     <div th:replace="~{navbar/__navbar}"></div>
-    <div class="" layout:fragment="content"></div>
+    <div id="loading" class="loading-div">
+        <div class="loader03"></div>
+    </div>
+    <div id="content_body" class="" style="display: none;" layout:fragment="content"></div>
     <div th:replace="~{footer/__footer}"></div>
     <div sec:authorize="isAuthenticated()">
         <span id="isAuth" th:data-role="${#authentication.getPrincipal().getCurrentUser().getUserRole()}" class="d-none" th:text="${#authentication.getPrincipal().getCurrentUser().getLastNotificationClick()}">true</span>  
@@ -305,6 +315,8 @@
         }    
         setTimeout(function(){
             convertTimeToFormat()
+            $("#loading").addClass("d-none")
+            $("#content_body").css({"display": "block"})
         }, 1000);
 
     </script>
