--- a/Controller/src/main/resources/templates/admin/admin-feedback.html
+++ b/Controller/src/main/resources/templates/admin/admin-feedback.html
@@ -6,7 +6,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
     <style>
 
 body{
@@ -165,8 +164,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
                 if(_response ==null ){
                     alert("remove fail")
                 }else{
-                    alert("success")
-                    location.reload = true;
+                    location.reload();
                 }
             })
             $('#datepicker').datepicker({
