--- a/Controller/src/main/resources/templates/oauth_login.html
+++ b/Controller/src/main/resources/templates/oauth_login.html
@@ -80,7 +80,7 @@
                            
                         </div>
                         <div class="col-6 px-0 text-right">
-                          <button  style="width: 90px; background-color: #FF2A19;" type="submit" class="btn btn-primary text-white left-al"><span class="t-span">Login ></span> </button>
+                          <button  style="width: 90px; background-color: #FF2A19;" type="submit" class="btn btn-primary text-white left-al"><span class="t-span">Login</span> </button>
                         </div>
                     </div>
                 </div>
