--- a/Controller/src/main/resources/templates/admin-layout.html
+++ b/Controller/src/main/resources/templates/admin-layout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>KUNLOES ADMIN</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Hanuman|Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">    
     <link rel="stylesheet" href="https://storage.googleapis.com/non-spec-apps/mio-icons/latest/outline.css">
@@ -24,7 +24,7 @@
             position: absolute;
             width: 100%;
             height: 100%;
-            background-color: #470000;
+            background-color: #5d5d5d85;
             z-index: 3;
         }
     </style>
