--- a/Controller/src/main/resources/templates/content-by-category.html
+++ b/Controller/src/main/resources/templates/content-by-category.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Content By Category</title>
+    <title>KUNLOES</title>
 </head>
 <body>
 <div class="content bg-white" layout:fragment="content">
