--- a/Controller/src/main/resources/templates/home-layout.html
+++ b/Controller/src/main/resources/templates/home-layout.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>KUNLOES</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Hanuman|Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://storage.googleapis.com/non-spec-apps/mio-icons/latest/outline.css">
@@ -48,7 +48,7 @@
             position: absolute;
             width: 100%;
             height: 100%;
-            background-color: #470000;
+            background-color: #5d5d5d85;
             z-index: 3;
         }
     </style>
@@ -59,7 +59,7 @@
         <div class="loader03"></div>
     </div>
     <div id="content_body" class="" style="display: none;" layout:fragment="content"></div>
-    <div th:replace="~{footer/__footer}"></div>
+    <div id="footer_body" class="d-none" th:include="~{footer/__footer}"></div>
     <div sec:authorize="isAuthenticated()">
         <span id="isAuth" th:data-role="${#authentication.getPrincipal().getCurrentUser().getUserRole()}" class="d-none" th:text="${#authentication.getPrincipal().getCurrentUser().getLastNotificationClick()}">true</span>  
     </div>
@@ -67,7 +67,7 @@
     <div class="" layout:fragment="content-js"></div>
     <script>
         //Chamroeun
-        function requestContent(){
+        function requestContent(_id){
             var requestTitle = $("#content-request-title").val();
             var requestMessage = $("#content-request-message").val();
 
@@ -79,7 +79,7 @@
                 "text": requestMessage,
                 "status": 1,
                 "user": {
-                    "id": 1
+                    "id": _id
                 },
             }
             $.ajax({
@@ -108,6 +108,8 @@
             var l = 0;
 
             button.on("  paste keyup", function () {
+                let _div = `<div class=" loader05 m-0" style="width:26px;height:26px;"> </div>`
+                $("#srchBody").html(_div);
 
                 var name = $("#srch").val();
 
@@ -115,7 +117,7 @@
                 if (l == 0) {
                     l = 1;
                     tooltip = new maTooltip(button, {
-                        inline_style: 'max-width: none; border-radius:8px; width: 270px; overflow: hidden; padding: 0pc;background-color: #fbfbfbfb;',
+                        inline_style: 'max-width: none; border-radius:8px; width: 600px; overflow: hidden; padding: 0pc;background-color: #00000029;',
                         full_visibility_duration: 999999999,
                         position: maTooltip.POSITION.BOTTOM,
                         static_message: `<div id="srh" class="container-fluid p-0" style="    background-color: #fbfbfb; color: black; border-radius: inherit;   ">   
@@ -134,7 +136,7 @@
                             $('.maTooltip-BOTTOM').remove()
                         }
                         var elem = "";
-                        elem += `<div class ="row er p-2"  style="border-bottom: 1px  solid black;">
+                        elem += `<div class ="row er p-2"  style="border-bottom: 1px  solid #00000029;">
                                      <div class="col-6" style="font-size: 14px; text-align: left;">
                                         TITLE
                                      </div>
@@ -153,7 +155,7 @@
                         }
 
                         $("#srh").append(elem)
-
+                        $("#srchBody").html(` <i class="material-icons-new outline-search" style="color: #0000008 !important; "></i>`)
                     },
                     error: function (err) {
 
@@ -177,7 +179,22 @@
             
           
         });
+        /** NOTIFICATION **/
+        
+        /*******************
+            START 
+                getAmountNotiFromApi
+                getNotification
 
+            CLICK
+                updateLastReadIfClick
+                updateLastReadIfClickShowContentList
+
+            CONVERT    
+                convertJsonToNotificationList
+                convertAdminJsonToNotificationList
+
+        **************************/
         const updateLastReadIfClick = async () => {
             let json = null;
             try {
@@ -291,6 +308,8 @@
                 </a>`
         }
         getNotification()
+        /** NOTIFICATION **/
+
         moment.locale("km")
         const convertTimeToFormat = () => {
             
@@ -317,6 +336,7 @@
             convertTimeToFormat()
             $("#loading").addClass("d-none")
             $("#content_body").css({"display": "block"})
+            $("#footer_body").removeClass("d-none")
         }, 1000);
 
     </script>
