correct UI and X

--- a/Controller/src/main/resources/templates/footer/__footer.html
+++ b/Controller/src/main/resources/templates/footer/__footer.html
@@ -5,7 +5,7 @@
     }
     </style>
     <div class="footer-middle">
-        <div class="container my-auto" >
+        <div class="container-fluid my-auto" >
             <div class="row mt-4">
                
                 <div class="col-4 col-md-3 pt-3">
