--- a/Controller/src/main/resources/templates/clients/content-detail.html
+++ b/Controller/src/main/resources/templates/clients/content-detail.html
@@ -72,20 +72,20 @@
         <div class="col-12">
             <!-- <div class="container-fluid"> -->
             <div class="row" style="margin-bottom: 23px;">
-                <div class="col-2 col-sm-2 col-md-1 col-lg-1 pl-0" id="pfpic"
+                <div class="col-2 col-sm-2 col-md-2 col-lg-1 pl-0" id="pfpic"
                      style="  padding-left: 0; text-align: right; margin-bottom: 23px;">
                     <!-- <img src="" alt=""> -->
-                    <img class=" rounded-circle z-depth-2 myButton point"
-                         style="width: 80px; width: 60px; height: 60px;" alt="100x100"
+                    <img class=" rounded-circle z-depth-2 myButton point mr-md-2"
+                         style="  width: 60px; height: 60px;" alt="100x100"
                          id="ownerImg"
                          src="https://cdn.mos.cms.futurecdn.net/xgc36EhSDW9Zu3RGLCfLEg-970-80.jpg"
                          data-holder-rendered="true">
 
                 </div>
 
-                <div class="col-8 col-sm-8 col-md-9 col-lg-9" style="padding-left: 0;">
+                <div class="col-3 col-sm-3 col-md-3 col-lg-3" style="padding-left: 0;">
 
-                    <div class="container ml-0 pt-1">
+                    <div class="container ml-0 pt-1" style="display: flow-root">
                         <div class="row mb-0">
                             <!-- <input  type="button" value="Click me!"> -->
                             <div class="col-12 pl-0">
@@ -97,7 +97,7 @@
                         </div>
                     </div>
                 </div>
-
+                <div class="col-5 col-sm-5 col-md-5 col-lg-6"></div>
                 <div class="col-2 col-sm-2 col-md-2 col-lg-2 pr-0">
                     <table style="float: right; margin-top: 3%;">
                         <tr>
