--- a/Controller/src/main/resources/templates/clients/content-detail.html
+++ b/Controller/src/main/resources/templates/clients/content-detail.html
@@ -81,10 +81,10 @@
         <div class="col-12">
             <!-- <div class="container-fluid"> -->
             <div class="row" style="margin-bottom: 23px;">
-                <div class="col-2 col-sm-2 col-md-2 col-lg-1 pl-0" id="pfpic"
+                <div class="col-2 col-sm-2 col-md-2  col-lg-1 pl-2 pl-sm-2 pl-lg-2  " id="pfpic"
                      style="  padding-left: 0; text-align: right; margin-bottom: 23px;">
                     <!-- <img src="" alt=""> -->
-                    <img class=" rounded-circle z-depth-2 myButton point mr-md-2"
+                    <img class=" rounded-circle z-depth-2 myButton point mr-sm-3 "
                          style="  width: 60px; height: 60px;" alt="100x100"
                          id="ownerImg"
                          src="https://cdn.mos.cms.futurecdn.net/xgc36EhSDW9Zu3RGLCfLEg-970-80.jpg"
@@ -92,7 +92,7 @@
 
                 </div>
 
-                <div class="col-3 col-sm-3 col-md-3 col-lg-3" style="padding-left: 0;">
+                <div class="col-5 col-sm-4 col-md-3 col-lg-3" style="padding-left: 0;">
 
                     <div class="container ml-0 pt-1" style="display: flow-root">
                         <div class="row mb-0">
@@ -106,7 +106,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-5 col-sm-5 col-md-5 col-lg-6"></div>
+                <div class="col-3 col-sm-4 col-md-5 col-lg-6"></div>
                 <div class="col-2 col-sm-2 col-md-2 col-lg-2 pr-0">
                     <table style="float: right; margin-top: 3%;">
                         <tr>
