--- a/Controller/src/main/resources/templates/clients/content-detail.html
+++ b/Controller/src/main/resources/templates/clients/content-detail.html
@@ -92,12 +92,12 @@
 
                 </div>
 
-                <div class="col-5 col-sm-4 col-md-3 col-lg-3" style="padding-left: 0;">
+                <div class="col-6 col-sm-4 col-md-3 col-lg-3" style="padding-left: 0;">
 
                     <div class="container ml-0 pt-1" style="display: flow-root">
-                        <div class="row mb-0">
+                        <div class="row mb-0 pl-3 pl-sm-0 pl-dm-0 pl-lg-0">
                             <!-- <input  type="button" value="Click me!"> -->
-                            <div class="col-12 pl-0">
+                            <div class="col-12 pl-0 ">
                                         <span id="myButton" style="color: #46464e;" bio="" location=""
                                               class="point myButton"
                                               data-toggle="tooltip" data-html="true"> Kong Pengsea</span>
@@ -106,7 +106,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-3 col-sm-4 col-md-5 col-lg-6"></div>
+                <div class="col-2 col-sm-4 col-md-5 col-lg-6"></div>
                 <div class="col-2 col-sm-2 col-md-2 col-lg-2 pr-0">
                     <table style="float: right; margin-top: 3%;">
                         <tr>
@@ -132,10 +132,6 @@
                                             </div>
                                             <div class="modal-body">
                                                 <form>
-                                                    <!--                                                            <div class="form-group">-->
-                                                    <!--                                                                <label for="recipient-name" class="col-form-label">Recipient:</label>-->
-                                                    <!--                                                                <input type="text" class="form-control" id="recipient-name">-->
-                                                    <!--                                                            </div>-->
 
                                                     <div class="form-group">
                                                         <label for="feedback-message" class="col-form-label mb-2" >Your Message</label>
