icon and width search

--- a/Controller/src/main/resources/templates/fragment/__content_card.html
+++ b/Controller/src/main/resources/templates/fragment/__content_card.html
@@ -43,7 +43,7 @@
     <div class="card-footer d-inline d-flex justify-content-between" style="background-color: transparent">
         <div>
             <sup>
-                <img class="" src="/icon/heart-pink.svg" style="width: 20px; height: 20px;" alt="">
+                <img class="" src="/icon/fireworkunfill.svg" style="width: 20px; height: 20px;" alt="">
                 <span class="kht-text-color-express" th:text=${likes.get(content.getId())}>12</span>
                 &nbsp;
                 <img class="" src="/icon/comment.svg" style="width: 20px; height: 20px;" alt="">
